--- a/src/Spidernet.TaskScheduler.Test/Spidernet.TaskScheduler.Test.csproj
+++ b/src/Spidernet.TaskScheduler.Test/Spidernet.TaskScheduler.Test.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Spidernet.TaskScheduler\Spidernet.TaskScheduler.csproj" />
+  </ItemGroup>
+
 </Project>
