move model to .Model project

--- a/src/Spidernet.Client.Tests/Spidernet.Client.Tests.csproj
+++ b/src/Spidernet.Client.Tests/Spidernet.Client.Tests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Spidernet.Client\Spidernet.Client.csproj" />
+    <ProjectReference Include="..\Spidernet.Model\Spidernet.Model.csproj" />
   </ItemGroup>
 
 </Project>
