--- a/src/Spidernet.Client/Spidernet.Client.csproj
+++ b/src/Spidernet.Client/Spidernet.Client.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <ProjectReference Include="..\Spidernet.Model\Spidernet.Model.csproj" />
   </ItemGroup>
 
 </Project>
