--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,11 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+flyway.*.conf
+launchSettings.json
+out/
+dist/
+*.log
+.DS_Store
+appsettings.*.json
+*/Properties
