--- a/src/Spidernet.WebApp/package.json
+++ b/src/Spidernet.WebApp/package.json
@@ -1,36 +1,39 @@
 {
-  "name": "spidernet.web-app",
+  "name": "spidernet.webapp",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "clean": "echo 'a'",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "description": "Spidernet.WebApp",
-  "author": {
-    "name": ""
-  },
   "dependencies": {
-    "vue": "2.5.17",
-    "vue-class-component": "6.0.0",
-    "vue-property-decorator": "7.0.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.0",
+    "typescript": "~3.7.2"
   },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "3.0.4",
-    "@vue/cli-plugin-typescript": "3.0.4",
-    "@vue/cli-service": "3.0.4",
-    "typescript": "3.1.1",
-    "vue-template-compiler": "2.5.17"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
