--- a/src/Spidernet.BLL/Spidernet.BLL.csproj
+++ b/src/Spidernet.BLL/Spidernet.BLL.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Spidernet.DAL\Spidernet.DAL.csproj" />
   </ItemGroup>
 
