--- a/src/Spidernet.WebApp/package.json
+++ b/src/Spidernet.WebApp/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
