--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@
 #   MyProject.Test\
 #      MyProject.Test.csproj (test library)
 #
-# Please find the full example project here:
+# Please find the full example project here:::
 # https://gitlab.com/tobiaskoch/gitlab-ci-example-dotnetcore
 
 # see https://hub.docker.com/r/microsoft/dotnet/
