数据库和查询用户调通

--- a/src/Spidernet.WebAPI/appsettings.json
+++ b/src/Spidernet.WebAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "DatabaseSettings": {
+    //±¾µØ
+    "ConnectionString": "Server=db.example.com;Database=spidernet;Uid=oallure;Pwd=OAllure@2019!;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ServerNodeNo": 1,
   "AllowedHosts": "*"
 }
