--- a/src/Spidernet.Client/Spidernet.Client.csproj
+++ b/src/Spidernet.Client/Spidernet.Client.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.21" />
     <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.0.0" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
   </ItemGroup>
 
