--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,7 @@
-# This is a simple gitlab continuous integration example project (compatible with the shared runner provided on gitlab.com)
-# using the official debian linux based dotnet docker image to build a .NET Core project.
-#
-# MyProject.sln
-#   MyProject\
-#      MyProject.csproj (console application)
-#   MyProject.Test\
-#      MyProject.Test.csproj (test library)
-#
-# Please find the full example project here:::
-# https://gitlab.com/tobiaskoch/gitlab-ci-example-dotnetcore
-
-# see https://hub.docker.com/r/microsoft/dotnet/
-# image: mcr.microsoft.com/dotnet/core/sdk:2.2.301
-
-
-
 stages:
   - build_and_publish
 
-debug:
+build_and_publish:
   stage: build_and_publish
   tags:
     - Linux
