--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,32 @@
-# This is a simple gitlab continuous integration example project (compatible with the shared runner provided on gitlab.com)
-# using the official debian linux based dotnet docker image to build a .NET Core project.
-#
-# MyProject.sln
-#   MyProject\
-#      MyProject.csproj (console application)
-#   MyProject.Test\
-#      MyProject.Test.csproj (test library)
-#
-# Please find the full example project here:::
-# https://gitlab.com/tobiaskoch/gitlab-ci-example-dotnetcore
-
-# see https://hub.docker.com/r/microsoft/dotnet/
-# image: mcr.microsoft.com/dotnet/core/sdk:2.2.301
-
-
-
+variables:
+  ASPNETCORE_ENVIRONMENT: "Development"
+  ASPNETCORE_ACM_ALIYUN_GROUP: "Spidernet"
+  ASPNETCORE_ACM_ALIYUN_DATA_ID: "Spidernet.Client"
 stages:
-  - test
+  - build
+  - push
+  - deploy
 
-debug:
-  stage: test
+develop_webapi_build:
+  stage: build
   tags:
     - Linux
   script:
-    - docker build -t spider-net-webapi:latest -f dockerfiles/WebAPIDockerfile .
+    - docker build -t spidernet-webapi:latest -f dockerfiles/WebAPIDockerfile .
+    
+develop_webapi_push:
+  stage: push
+  tags:
+    - Linux
+  script:
+    - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
+    - docker tag spidernet-webapi:latest guoyongchang/spidernet-webapi:latest
+    - docker push guoyongchang/spidernet-webapi:latest
+
+develop_webapi_deploy:
+  stage: deploy
+  tags:
+    - Linux
+  script:
+    - docker rm -rf spidernet-webapi-develop
+    - docker run --name spidernet-webapi-develop -p 6543:80 guoyongchang/spidernet-webapi:develop-latest -d
