ci file changed.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,4 +29,4 @@ develop_webapi_deploy:
     - Linux
   script:
     - docker rm -f $(docker ps -a | grep spidernet-webapi:develop-latest | awk '{print $1'})
-    - docker run -p 6543:5001 -e ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT -e ASPNETCORE_ACM_ALIYUN_NAMESPACE=$ASPNETCORE_ACM_ALIYUN_NAMESPACE -e ASPNETCORE_ACM_ALIYUN_ACCESS_KEY=ASPNETCORE_ACM_ALIYUN_ACCESS_KEY -e ASPNETCORE_ACM_ALIYUN_DATA_ID=$ASPNETCORE_ACM_ALIYUN_DATA_ID -e ASPNETCORE_ACM_ALIYUN_GROUP=$ASPNETCORE_ACM_ALIYUN_GROUP -d guoyongchang/spidernet-webapi:develop-latest --name spidernet-webapi-develop
+    - docker run -p 6543:5001 -e ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT -e ASPNETCORE_ACM_ALIYUN_NAMESPACE=$ASPNETCORE_ACM_ALIYUN_NAMESPACE -e ASPNETCORE_ACM_ALIYUN_ACCESS_KEY=$ASPNETCORE_ACM_ALIYUN_ACCESS_KEY -e ASPNETCORE_ACM_ALIYUN_SECRET_KEY=$ASPNETCORE_ACM_ALIYUN_SECRET_KEY -e ASPNETCORE_ACM_ALIYUN_DATA_ID=$ASPNETCORE_ACM_ALIYUN_DATA_ID -e ASPNETCORE_ACM_ALIYUN_GROUP=$ASPNETCORE_ACM_ALIYUN_GROUP -d guoyongchang/spidernet-webapi:develop-latest --name spidernet-webapi-develop
